--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,16 @@
   "presets": [
     "es2015",
     "stage-1"
+  ],
+  "plugins": [
+    [
+      "transform-runtime",
+      {
+        "helpers": false,
+        "polyfill": false,
+        "regenerator": true,
+        "moduleName": "babel-runtime"
+      }
+    ]
   ]
 }
