--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "autoprefixer": "^8.0.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-stage-1": "^6.24.1",
     "chai": "^4.1.2",
     "css-loader": "^0.28.8",
@@ -46,12 +47,14 @@
     "html-webpack-plugin-for-multihtml": "^2.30.2",
     "ip": "^1.1.5",
     "node-notifier": "^5.1.2",
+    "node-sass": "^4.9.4",
     "portfinder": "^1.0.13",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.9",
     "postcss-plugin-weex": "^0.1.6",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
+    "sass-loader": "^7.1.0",
     "script-ext-html-webpack-plugin": "^1.8.5",
     "vue-loader": "^12.2.0",
     "vue-style-loader": "^3.0.3",
